--- a/requirements_subdesarrolladores.txt
+++ b/requirements_subdesarrolladores.txt
@@ -1,2 +1,2 @@
-Luis Fernando Cruz Ramos <luis.cruz@udc.es>
-Guillermo Alfonso Varela Chouciño <guillermo.vchoucino@udc.es>
+# Luis Fernando Cruz Ramos <luis.cruz@udc.es>
+# Guillermo Alfonso Varela Chouciño <guillermo.vchoucino@udc.es>
